logs/api-error-0.log
You have triggered an unhandledRejection, you may have forgotten to catch a Promise rejection:
Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/home/websites/degenduel/routes/nonce-store.js' imported from /home/websites/degenduel/routes/auth.js
    at finalizeResolution (node:internal/modules/esm/resolve:275:11)
    at moduleResolve (node:internal/modules/esm/resolve:860:10)
    at defaultResolve (node:internal/modules/esm/resolve:984:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:688:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:612:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:595:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:248:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:136:49)
You have triggered an unhandledRejection, you may have forgotten to catch a Promise rejection:
file:///home/websites/degenduel/index.js:74
import nonceRoutes from './routes/nonce-store.js';
       ^^^^^^^^^^^
SyntaxError: The requested module './routes/nonce-store.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:181:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:264:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 04:00:51 -05:00: Failed to initialize Swagger: TypeError: Cannot read properties of null (reading 'indexOf')
    at Object.parse (/home/websites/degenduel/node_modules/yaml/dist/parse-3997f544.js:1874:11)
    at Object.parseDocument (/home/websites/degenduel/node_modules/yaml/dist/index.js:41:24)
    at build (/home/websites/degenduel/node_modules/swagger-jsdoc/src/specification.js:229:45)
    at module.exports (/home/websites/degenduel/node_modules/swagger-jsdoc/src/lib.js:32:10)
    at file:///home/websites/degenduel/config/swagger.js:46:17
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 04:17:03 -05:00: Failed to initialize Swagger: TypeError: Cannot read properties of null (reading 'indexOf')
    at Object.parse (/home/websites/degenduel/node_modules/yaml/dist/parse-3997f544.js:1874:11)
    at Object.parseDocument (/home/websites/degenduel/node_modules/yaml/dist/index.js:41:24)
    at build (/home/websites/degenduel/node_modules/swagger-jsdoc/src/specification.js:229:45)
    at module.exports (/home/websites/degenduel/node_modules/swagger-jsdoc/src/lib.js:32:10)
    at file:///home/websites/degenduel/config/swagger.js:46:17
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 04:18:27 -05:00: Failed to initialize Swagger: TypeError: Cannot read properties of null (reading 'indexOf')
    at Object.parse (/home/websites/degenduel/node_modules/yaml/dist/parse-3997f544.js:1874:11)
    at Object.parseDocument (/home/websites/degenduel/node_modules/yaml/dist/index.js:41:24)
    at build (/home/websites/degenduel/node_modules/swagger-jsdoc/src/specification.js:229:45)
    at module.exports (/home/websites/degenduel/node_modules/swagger-jsdoc/src/lib.js:32:10)
    at file:///home/websites/degenduel/config/swagger.js:46:17
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 05:08:04 -05:00: Failed to initialize Swagger: TypeError: Cannot read properties of null (reading 'indexOf')
    at Object.parse (/home/websites/degenduel/node_modules/yaml/dist/parse-3997f544.js:1874:11)
    at Object.parseDocument (/home/websites/degenduel/node_modules/yaml/dist/index.js:41:24)
    at build (/home/websites/degenduel/node_modules/swagger-jsdoc/src/specification.js:229:45)
    at module.exports (/home/websites/degenduel/node_modules/swagger-jsdoc/src/lib.js:32:10)
    at file:///home/websites/degenduel/config/swagger.js:46:17
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
You have triggered an unhandledRejection, you may have forgotten to catch a Promise rejection:
ReferenceError: requireAuth is not defined
    at file:///home/websites/degenduel/routes/contests.js:414:18
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 05:37:30 -05:00: Failed to initialize Swagger: TypeError: Cannot read properties of null (reading 'indexOf')
    at Object.parse (/home/websites/degenduel/node_modules/yaml/dist/parse-3997f544.js:1874:11)
    at Object.parseDocument (/home/websites/degenduel/node_modules/yaml/dist/index.js:41:24)
    at build (/home/websites/degenduel/node_modules/swagger-jsdoc/src/specification.js:229:45)
    at module.exports (/home/websites/degenduel/node_modules/swagger-jsdoc/src/lib.js:32:10)
    at file:///home/websites/degenduel/config/swagger.js:46:17
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 06:01:26 -05:00: Failed to initialize Swagger: TypeError: Cannot read properties of null (reading 'indexOf')
    at Object.parse (/home/websites/degenduel/node_modules/yaml/dist/parse-3997f544.js:1874:11)
    at Object.parseDocument (/home/websites/degenduel/node_modules/yaml/dist/index.js:41:24)
    at build (/home/websites/degenduel/node_modules/swagger-jsdoc/src/specification.js:229:45)
    at module.exports (/home/websites/degenduel/node_modules/swagger-jsdoc/src/lib.js:32:10)
    at file:///home/websites/degenduel/config/swagger.js:46:17
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 06:01:26 -05:00: (node:933174) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
2025-01-24 06:16:47 -05:00: Failed to initialize Swagger: TypeError: Cannot read properties of null (reading 'indexOf')
    at Object.parse (/home/websites/degenduel/node_modules/yaml/dist/parse-3997f544.js:1874:11)
    at Object.parseDocument (/home/websites/degenduel/node_modules/yaml/dist/index.js:41:24)
    at build (/home/websites/degenduel/node_modules/swagger-jsdoc/src/specification.js:229:45)
    at module.exports (/home/websites/degenduel/node_modules/swagger-jsdoc/src/lib.js:32:10)
    at file:///home/websites/degenduel/config/swagger.js:46:17
    at ModuleJob.run (node:internal/modules/esm/module_job:272:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:552:26)
2025-01-24 06:16:47 -05:00: (node:934415) [DEP0040] DeprecationWarning: The `punycode` module is deprecated. Please use a userland alternative instead.
(Use `node --trace-deprecation ...` to show where the warning was created)
